# youtube-audio-chunker

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  setup.sh
.claude/: settings.json
docs/superpowers/specs/: 2026-03-15-two-column-search-layout-design.md  2026-03-16-youtube-account-feeds-design.md  2026-03-19-non-blocking-add-design.md
gui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  lib.rs  sidecar.rs
gui/src/lib/: backend.ts  constants.ts  format.ts  storage.test.ts  storage.ts
gui/src/lib/components/: AddEpisodeForm.svelte  AuthModal.svelte  ContentTypeBadge.svelte  ContentTypeSelect.svelte  DeviceOnlyList.svelte  DiscoverView.svelte  DownloadedList.svelte  EpisodeCard.svelte  EpisodeEditForm.svelte  ErrorToast.svelte  FeedSidebar.svelte  FeedView.svelte  GarminStatusStrip.svelte  PlaylistGrid.svelte  (+6 more)
gui/src/routes/: +layout.svelte  +page.svelte
src/youtube_audio_chunker/: __init__.py  __main__.py  auth.py  cli.py  constants.py  discovery.py  downloader.py  errors.py  garmin.py  httpapi.py  library.py  pipeline.py  settings.py  sidecar.py  splitter.py  tagger.py  topic_extractor.py  topics.py
tests/: conftest.py  test_auth.py  test_cli.py  test_constants.py  test_discovery.py  test_downloader.py  test_garmin.py  test_httpapi.py  test_library.py  test_pipeline.py  test_settings.py  test_sidecar.py  test_splitter.py  test_tagger.py  test_topic_extractor.py  test_topics.py
(+10 files in other folders)
