[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-audio-chunker"
version = "0.1.0"
description = "Download YouTube audio, split into chunks, and sideload to Garmin watches"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0",
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
youtube-audio-chunker = "youtube_audio_chunker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
