[package]
name = "youtube-audio-chunker-gui"
version = "0.1.0"
description = "Desktop GUI for youtube-audio-chunker"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["sync", "io-util", "process", "rt", "macros"] }
